@@ -99,6 +99,12 @@ extern int	get_jobs(char *cmd_ptr, int *err_code, char **err_msg)
 		error("wiki: GETJOBS has invalid ARG value");
 		return -1;
 	}
+	if (job_list == NULL) {
+		*err_code = -140;
+		*err_msg = "Still performing initialization");
+		error("wiki: job_list not yet initilized");
+		return -1;
+	}
 	tmp_char++;
 	lock_slurmctld(job_read_lock);
 	if (update_time == 0)
